[workspace]
resolver = "2"
members = [
  #"enclave-runner",
  "tokio",
  "tokio-macros",
  "tokio-test",
  "tokio-stream",
  "tokio-util",

  # Internal
  "benches",
  "examples",
  "stress-test",
  "tests-build",
  "tests-integration",
]

[workspace.metadata.spellcheck]
config = "spellcheck.toml"

[patch.crates-io]
async-usercalls = { git = "https://github.com/lexe-app/rust-sgx", branch = "lexe-b6f02626-2024_06_28" }
# enclave-runner = { git = "https://github.com/lexe-app/rust-sgx", branch = "lexe-b6f02626-2024_06_28" }
mio = { git = "https://github.com/lexe-app/mio", branch = "lexe-v0.8.11-2024_07_01" }
# sgx-isa = { git = "https://github.com/fortanix/rust-sgx", branch = "lexe-b6f02626-2024_06_28" }
# sgxs = { git = "https://github.com/fortanix/rust-sgx", branch = "lexe-b6f02626-2024_06_28" }
# tokio = { path = "./tokio" }
